--- a/templates/project/transaction_list.html
+++ b/templates/project/transaction_list.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <title>Transactions</title>
 </head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 <style>
     table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
-}
-
-td, th {
+    }
+    td, th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
-}
-
-tr:nth-child(even) {
+    }
+    tr:nth-child(even) {
     background-color: #dddddd;
-}
-
+    }
 </style>
+
 <body>
     <p> Transaction List </p>
 
@@ -29,11 +30,13 @@ tr:nth-child(even) {
         <form method='post'>
             {% csrf_token %}
              {{ form.as_p }}
-{#            <input type="text" name="ids">#}
+{#            <input type="text" name="name">#}
             <button type="submit">Submit</button>
         </form>
     </div>
-
+{#    <h1>{{ name }}</h1>#}
+    <div class = "notequal" >
+    <h5 style="align-content: center"> Not Equal Datas </h5>
     <table>
         <thead>
         <th> ID </th>
@@ -43,32 +46,44 @@ tr:nth-child(even) {
         <th> TOTAL </th>
         <th> BANK </th>
         </thead>
-        {% for i in transactions %}
+        {% for i in notequal %}
         <tr>
         <td> {{ i.id }}</td>
         <td> {{ i.date }}</td>
         <td> {{ i.transfer }}</td>
         <td> {{ i.fee }}</td>
         <td> {{ i.total }}</td>
-        <td> {{ i.name }}</td>
+        <td> {{ i.bank }}</td>
         </tr>
         {%  endfor %}
     </table>
-{#<p> {{ transactions }}</p>#}
-{#{% for i in tr %}#}
-{#    <p> {{ i.name }} </p>#}
-{##}
-{#{% endfor  %}#}
+    </div>
 
-{#{% for i in transactions %}#}
-{#    <div>#}
-{#        <p>Date: {{ i.date }}</p>#}
-{#        <p>Name: {{ i.name }}</p>#}
-{#        <p>Transfer:{{ i.transfer }}</p>#}
-{#        <p>Fee: {{ i.fee }}</p>#}
-{#    </div>#}
-{#{% endfor %}#}
+    <div class = "equal" >
+    <h5 style="align-content: center"> Equal Datas </h5>
+    <table>
+        <thead>
+        <th> ID </th>
+        <th> DATE </th>
+        <th> TRANSFER </th>
+        <th> FEE </th>
+        <th> TOTAL </th>
+        <th> BANK </th>
+        </thead>
+        {% for i in equal %}
+        <tr>
+        <td> {{ i.id }}</td>
+        <td> {{ i.date }}</td>
+        <td> {{ i.transfer }}</td>
+        <td> {{ i.fee }}</td>
+        <td> {{ i.total }}</td>
+        <td> {{ i.bank }}</td>
+        </tr>
+        {%  endfor %}
+    </table>
+    </div>
 
 
 </body>
+
 </html>
