'updated front-end'

--- a/templates/project/transaction_list.html
+++ b/templates/project/transaction_list.html
@@ -78,6 +78,10 @@
                         <option value ="Tourism">Rahmet</option>
                         <option value ="Kazkom">Chocofood</option>
             </select>
+            <select name ="direction" class="custom-select" id="inputGroupSelect04" style="width:200px">
+                        <option value="ChocoToPayment">Choco -> Payment</option>
+                        <option value="PaymentToChoco">Payment -> Choco </option>
+            </select>
             <button type="submit" class="btn btn-success ml-3 btn-1" name = "submit" value="search">Submit</button>
             <button type="submit" class="btn btn-success ml-3 btn-2" name = "submit" value="update">Update</button>
         </form>
