'updated front-end'

--- a/templates/project/History.html
+++ b/templates/project/History.html
@@ -32,6 +32,8 @@
 
     li a:hover {
         background-color: #111;
+        text-decoration: none;
+        color: white;
     }
 </style>
 <body>
