--- a/templates/project/transaction_list.html
+++ b/templates/project/transaction_list.html
@@ -76,6 +76,8 @@
 
     li a:hover {
         background-color: #111;
+        text-decoration: none;
+        color: white;
     }
 </style>
 
@@ -115,14 +117,14 @@
     </div>
 
 {#    compare and insert to table#}
-    {% if found == True%}
-
-        <script>
-        function myFunction() {
-            alert("Found new files");
-        }
-        </script>
-    {% endif %}
+{#    {% if found == True%}#}
+{##}
+{#        <script>#}
+{#        function myFunction() {#}
+{#            alert("Found new files");#}
+{#        }#}
+{#        </script>#}
+{#    {% endif %}#}
     {% if direction == "ChocoToPayment" %}
     <h1 class="text-center my-3"> {{ name }} Transactions</h1>
     <div class="container">
