--- a/templates/project/History.html
+++ b/templates/project/History.html
@@ -42,7 +42,33 @@
   <li><a href="/history">History</a></li>
 </ul>
 
-<h1> History page </h1>
+<h1 class="text-center my-3"> History page </h1>
+
+    <div class="select2-container" style="padding-top:15px;">
+        <form method='post' class="d-flex justify-content-center">
+                        {% csrf_token %}
+            <input type="text" placeholder="Find by ID" name="id">
+            <button type="submit" class="btn btn-success ml-3 btn-1" name = "find" value="id">Find</button>
+            <br>
+            <input type="text" placeholder="Find by reference" name="reference">
+            <button type="submit" class="btn btn-success ml-3 btn-2" name = "find" value="reference">Find</button>
+        </form>
+    </div>
+
+<div class="container">
+        <div class="row">
+            <div class="col-md-10 mx-auto">
+{#                {% if found %}#}
+{##}
+{#                {% endif %}#}
+{##}
+{#                {% if !found %}#}
+{#                    <p> Ничего по данному  order_id не найдено </p>#}
+{#                {% endif %}#}
+            </div>
+        </div>
+</div>
+
 
 </body>
 </html>
